force-app/main/default/objects/Policy__c/fields/Affiliate_Account__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Affiliate Account)</relationshipLabel>
    <relationshipName>Affiliate_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>