force-app/main/default/objects/Policy__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies (Agency)</relationshipLabel>
    <relationshipName>Agency</relationshipName>
    <type>Lookup</type>
</CustomField>