force-app/main/default/objects/Policy__c/fields/Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id__c</fullName>
    <label>Agency Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>