force-app/main/default/objects/Policy__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies (Agent)</relationshipLabel>
    <relationshipName>Agent</relationshipName>
    <type>Lookup</type>
</CustomField>