force-app/main/default/objects/Policy__c/fields/Agent_Brokerage_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_Brokerage_Fee__c</fullName>
    <formula>IF(
   ISBLANK(Quote_c__r.Agent_Fee__c),
   0,
   Quote_c__r.Agent_Fee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Brokerage Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>