force-app/main/default/objects/Policy__c/fields/Agent_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fee__c</fullName>
    <formula>CASE(
Term__c ,
&quot;Daily&quot;, Broker_Policy_Fee__c- 10,
&quot;Semi-Annual&quot;, Broker_Policy_Fee__c- 15,
&quot;Annual&quot;, Broker_Policy_Fee__c- 25,
Broker_Policy_Fee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>