force-app/main/default/objects/Policy__c/fields/agent_id__c.field-meta.xml
<CustomField>
    <fullName>agent_id__c</fullName>
    <label>agent_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>