force-app/main/default/objects/Policy__c/fields/Auto_renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto renew</label>
    <type>Checkbox</type>
</CustomField>