force-app/main/default/objects/Policy__c/fields/Auto_renew_card__c.field-meta.xml
<CustomField>
    <fullName>Auto_renew_card__c</fullName>
    <label>Auto renew card</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>