force-app/main/default/objects/Policy__c/fields/Auto_Renew_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renew Confirmed</label>
    <type>Checkbox</type>
</CustomField>