force-app/main/default/objects/Policy__c/fields/Broker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee__c</fullName>
    <formula>CASE(
Term__c ,
&quot;Daily&quot;, 10,
&quot;Semi-Annual&quot;, 15,
&quot;Annual&quot;, 25,
Broker_Policy_Fee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>