force-app/main/default/objects/Policy__c/fields/Caravan__c.field-meta.xml
<CustomField>
    <fullName>Caravan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caravan</label>
    <referenceTo>Caravan__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>