force-app/main/default/objects/Policy__c/fields/Chubb_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Chubb_Policy_Number__c</fullName>
    <label>Chubb Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>