force-app/main/default/objects/Policy__c/fields/Cloned_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used in process builder to make sure the policy record is not cloned more than once</inlineHelpText>
    <label>Cloned Policy</label>
    <type>Checkbox</type>
</CustomField>