force-app/main/default/objects/Policy__c/fields/End_at__c.field-meta.xml
<CustomField>
    <fullName>End_at__c</fullName>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>