force-app/main/default/objects/Policy__c/fields/End_Date_Filter_c__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Filter_c__c</fullName>
    <formula>TODAY() + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End_Date_Filter__c</label>
    <type>Date</type>
</CustomField>