force-app/main/default/objects/Policy__c/fields/Fully_Earned__c.field-meta.xml
<CustomField>
    <fullName>Fully_Earned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fully Earned</label>
    <type>Checkbox</type>
</CustomField>