force-app/main/default/objects/Policy__c/fields/Group_Manual__c.field-meta.xml
<CustomField>
    <fullName>Group_Manual__c</fullName>
    <label>Group # - Manual</label>
    <length>10</length>
    <type>Text</type>
</CustomField>