force-app/main/default/objects/Policy__c/fields/I_V_A_Mex_Tax__c.field-meta.xml
<CustomField>
    <fullName>I_V_A_Mex_Tax__c</fullName>
    <label>I.V.A. / Mex. Tax:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>