force-app/main/default/objects/Policy__c/fields/Insured_value__c.field-meta.xml
<CustomField>
    <fullName>Insured_value__c</fullName>
    <label>Stated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>