force-app/main/default/objects/Policy__c/fields/Ip__c.field-meta.xml
<CustomField>
    <fullName>Ip__c</fullName>
    <label>Ip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>