force-app/main/default/objects/Policy__c/fields/Issued_At__c.field-meta.xml
<CustomField>
    <fullName>Issued_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Issued At</label>
    <type>DateTime</type>
</CustomField>