force-app/main/default/objects/Policy__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <label>Liability</label>
    <type>TextArea</type>
</CustomField>