force-app/main/default/objects/Policy__c/fields/Liability_Payment__c.field-meta.xml
<CustomField>
    <fullName>Liability_Payment__c</fullName>
    <formula>Quote_c__r.Liability_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liability Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>