force-app/main/default/objects/Policy__c/fields/Liability_picklist__c.field-meta.xml
<CustomField>
    <fullName>Liability_picklist__c</fullName>
    <label>Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liability</valueSetName>
    </valueSet>
</CustomField>