force-app/main/default/objects/Policy__c/fields/Liquidation_Status__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Status__c</fullName>
    <label>Liquidation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liquidated</fullName>
            </value>
            <value>
                <fullName>Not Liquidated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>