force-app/main/default/objects/Policy__c/fields/Loyal_Client_Survey_Check__c.field-meta.xml
<CustomField>
    <fullName>Loyal_Client_Survey_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyal Client Survey Check</label>
    <type>Checkbox</type>
</CustomField>