force-app/main/default/objects/Policy__c/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <label>Medical</label>
    <type>TextArea</type>
</CustomField>