force-app/main/default/objects/Policy__c/fields/Medical_Payment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Payment__c</fullName>
    <formula>Quote_c__r.Medical_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>