force-app/main/default/objects/Policy__c/fields/Medical_picklist__c.field-meta.xml
<CustomField>
    <fullName>Medical_picklist__c</fullName>
    <label>Medical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical</valueSetName>
    </valueSet>
</CustomField>