force-app/main/default/objects/Policy__c/fields/Physical_Damage__c.field-meta.xml
<CustomField>
    <fullName>Physical_Damage__c</fullName>
    <formula>Quote_c__r.Physical_Damage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Damage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>