force-app/main/default/objects/Policy__c/fields/Platinum_Endorsement_Payment__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Endorsement_Payment__c</fullName>
    <formula>Quote_c__r.Platinum_Endorsment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platinum Endorsement Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>