force-app/main/default/objects/Policy__c/fields/Policy_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Policy_Account_Owner__c</fullName>
    <formula>Account_Policy__r.Owner.FirstName + &apos; &apos; + Account_Policy__r.Owner.LastName</formula>
    <label>Policy Account Owner</label>
    <type>Text</type>
</CustomField>