force-app/main/default/objects/Policy__c/fields/Policy_Account_Parent__c.field-meta.xml
<CustomField>
    <fullName>Policy_Account_Parent__c</fullName>
    <formula>Account_Policy__r.Parent.Name</formula>
    <label>Policy Account Parent</label>
    <type>Text</type>
</CustomField>