force-app/main/default/objects/Policy__c/fields/Policy_End_Date_7__c.field-meta.xml
<CustomField>
    <fullName>Policy_End_Date_7__c</fullName>
    <formula>End_Date__c -7</formula>
    <label>Policy End Date - 7</label>
    <type>Date</type>
</CustomField>