force-app/main/default/objects/Policy__c/fields/Policy_Fee__c.field-meta.xml
<CustomField>
    <fullName>Policy_Fee__c</fullName>
    <label>Policy Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>