force-app/main/default/objects/Policy__c/fields/Policy_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Policy_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Policy Parent Account)</relationshipLabel>
    <relationshipName>Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>