force-app/main/default/objects/Policy__c/fields/Policy_Range_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Range_Number__c</fullName>
    <formula>RIGHT(LEFT(Chubb_Policy_Number__c,11),6)</formula>
    <label>Policy Range Number</label>
    <type>Text</type>
</CustomField>