force-app/main/default/objects/Policy__c/fields/Policy_type__c.field-meta.xml
<CustomField>
    <fullName>Policy_type__c</fullName>
    <label>Policy_Type</label>
    <type>TextArea</type>
</CustomField>