force-app/main/default/objects/Policy__c/fields/Policy_Type_picklist__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type_picklist__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>Homeowners</fullName>
            </value>
            <value>
                <fullName>Motorcycle/Street Legal ATV</fullName>
            </value>
            <value>
                <fullName>Northbound</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>Watercraft</fullName>
            </value>
            <value>
                <fullName>Automobile-Van-Minivan</fullName>
            </value>
            <value>
                <fullName>Pick Up</fullName>
            </value>
            <value>
                <fullName>SUV-Crossover</fullName>
            </value>
            <value>
                <fullName>ATV-UTV-Quads-Buggie</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Motorhome</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>