force-app/main/default/objects/Policy__c/fields/Policy_URL__c.field-meta.xml
<CustomField>
    <fullName>Policy_URL__c</fullName>
    <description>The legacy system allowed an admin to re-generate a pdf policy at the url below but now its gone.  This is obsolete as of 4/23/22</description>
    <formula>&apos;Not available right now&apos;</formula>
    <inlineHelpText>This URL is no longer valid as of 4/23/22</inlineHelpText>
    <label>Policy URL</label>
    <type>Text</type>
</CustomField>