force-app/main/default/objects/Policy__c/fields/Rate_broker__c.field-meta.xml
<CustomField>
    <fullName>Rate_broker__c</fullName>
    <label>Rate_Broker</label>
    <type>TextArea</type>
</CustomField>