force-app/main/default/objects/Policy__c/fields/Rate_start_at__c.field-meta.xml
<CustomField>
    <fullName>Rate_start_at__c</fullName>
    <label>Rate_Start_At</label>
    <type>DateTime</type>
</CustomField>