force-app/main/default/objects/Policy__c/fields/Reference_number__c.field-meta.xml
<CustomField>
    <fullName>Reference_number__c</fullName>
    <label>Reference_Number</label>
    <type>TextArea</type>
</CustomField>