force-app/main/default/objects/Policy__c/fields/Renew_Payment_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Renew_Payment_Profile_Id__c</fullName>
    <label>Renew Payment Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>