force-app/main/default/objects/Policy__c/fields/Renew_Status__c.field-meta.xml
<CustomField>
    <fullName>Renew_Status__c</fullName>
    <label>Renew Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>