force-app/main/default/objects/Policy__c/fields/renewed_check__c.field-meta.xml
<CustomField>
    <fullName>renewed_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>renewed check</label>
    <type>Checkbox</type>
</CustomField>