force-app/main/default/objects/Policy__c/fields/renewed_from_id__c.field-meta.xml
<CustomField>
    <fullName>renewed_from_id__c</fullName>
    <label>Renewed_From_Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>