force-app/main/default/objects/Policy__c/fields/site__c.field-meta.xml
<CustomField>
    <fullName>site__c</fullName>
    <label>Site</label>
    <length>30</length>
    <type>Text</type>
</CustomField>