force-app/main/default/objects/Policy__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>New Lead Flow</fullName>
            </value>
            <value>
                <fullName>MexInsur</fullName>
            </value>
            <value>
                <fullName>Agent App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>