force-app/main/default/objects/Policy__c/fields/Start_at__c.field-meta.xml
<CustomField>
    <fullName>Start_at__c</fullName>
    <label>Start_At</label>
    <type>DateTime</type>
</CustomField>