force-app/main/default/objects/Policy__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <type>TextArea</type>
</CustomField>