force-app/main/default/objects/Policy__c/fields/Term_days__c.field-meta.xml
<CustomField>
    <fullName>Term_days__c</fullName>
    <label>Term_Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>