force-app/main/default/objects/Policy__c/fields/Terms_of_Cancellation_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Cancellation_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms of Cancellation Confirmed</label>
    <type>Checkbox</type>
</CustomField>