force-app/main/default/objects/Policy__c/fields/Territory_picklist__c.field-meta.xml
<CustomField>
    <fullName>Territory_picklist__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Territory</valueSetName>
    </valueSet>
</CustomField>