force-app/main/default/objects/Policy__c/fields/Test_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Policy_Id__c</fullName>
    <label>Test Policy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>