force-app/main/default/objects/Policy__c/fields/Third_Party_Bodily_Injury__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Bodily_Injury__c</fullName>
    <label>Third Party Bodily Injury</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Third_Party_Bodily_Injury</valueSetName>
    </valueSet>
</CustomField>