force-app/main/default/objects/Policy__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/Mazatlan</fullName>
            </value>
            <value>
                <fullName>America/Tijuana</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Chihuahua</fullName>
            </value>
            <value>
                <fullName>America/Monterrey</fullName>
            </value>
            <value>
                <fullName>America/Merida</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Hermosillo</fullName>
            </value>
            <value>
                <fullName>America/Mexico_City</fullName>
            </value>
            <value>
                <fullName>America/Vancouver</fullName>
            </value>
            <value>
                <fullName>Europe/Amsterdam</fullName>
            </value>
            <value>
                <fullName>America/Guatemala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>