force-app/main/default/objects/Policy__c/fields/Total_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium_Amount__c</fullName>
    <formula>IF( NOT(ISBLANK(Total_Transaction_Amount__c)), Total_Transaction_Amount__c ,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>