force-app/main/default/objects/Policy__c/fields/Total_Theft_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Theft_Payment__c</fullName>
    <formula>Quote_c__r.Total_Theft_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Theft Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>