force-app/main/default/objects/Policy__c/fields/Total_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Transaction_Amount__c</fullName>
    <label>Total Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>