force-app/main/default/objects/Policy__c/fields/Under_21__c.field-meta.xml
<CustomField>
    <fullName>Under_21__c</fullName>
    <label>Under_21</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>