force-app/main/default/objects/Policy__c/fields/Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Underwriter__c</fullName>
    <label>Underwriter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chubb</fullName>
            </value>
            <value>
                <fullName>Mapfre</fullName>
            </value>
            <value>
                <fullName>Qualitas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>