force-app/main/default/objects/Policy__c/fields/Updated_Quote_Json__c.field-meta.xml
<CustomField>
    <fullName>Updated_Quote_Json__c</fullName>
    <label>Updated Quote Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>