force-app/main/default/objects/Policy__c/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <label>User_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>