force-app/main/default/objects/Policy__c/fields/Vehicle_deductible_collision__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_deductible_collision__c</fullName>
    <label>Vehicle_Deductible_Collision</label>
    <type>TextArea</type>
</CustomField>