force-app/main/default/objects/Policy__c/fields/Vehicle_deductible_comprehensive__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_deductible_comprehensive__c</fullName>
    <label>Vehicle_Deductible_Comprehensive</label>
    <type>TextArea</type>
</CustomField>