force-app/main/default/objects/Policy__c/fields/Vehicle_id__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_id__c</fullName>
    <label>Vehicle_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>