force-app/main/default/objects/Policy__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <formula>Vehicle_Policy__r.Make__c</formula>
    <label>Vehicle Make</label>
    <type>Text</type>
</CustomField>