force-app/main/default/objects/Policy__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <formula>Vehicle_Policy__r.Model__c</formula>
    <label>Vehicle Model</label>
    <type>Text</type>
</CustomField>