force-app/main/default/objects/Policy__c/fields/Vehicle_Policy__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle(Policy)</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>