force-app/main/default/objects/Policy__c/fields/Vehicle_rental__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_rental__c</fullName>
    <label>Vehicle_Rental</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>