force-app/main/default/objects/Policy__c/fields/Vehicle_type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_type__c</fullName>
    <label>Vehicle_Type</label>
    <type>TextArea</type>
</CustomField>