force-app/main/default/objects/Policy__c/fields/Vehicle_Value__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Value__c</fullName>
    <formula>Vehicle_Policy__r.Value__c</formula>
    <label>Vehicle Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>