force-app/main/default/objects/Policy__c/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <formula>Vehicle_Policy__r.Year__c</formula>
    <label>Vehicle Year</label>
    <type>Text</type>
</CustomField>