force-app/main/default/objects/Policy__c/fields/Watercraft__c.field-meta.xml
<CustomField>
    <fullName>Watercraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Watercraft</label>
    <referenceTo>Watercraft__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>