force-app/main/default/objects/Policy__c/fields/What_is_the_purpose_of_trip__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_purpose_of_trip__c</fullName>
    <label>What is the purpose of trip?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Pleasure</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>